# fall-guard-cv

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.claude/skills/public-copy-check/: SKILL.md
.claude/skills/resume-context/: SKILL.md
.claude/skills/update-progress/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/workflows/: test.yml
data/: README.md  splits.json  urfd_meta.csv
docs/: PLAN.md  PLAN2.md
docs/results/: cross_dataset.md  error_analysis.md  rule_baseline.md  vlm_comparison.md  xgb_baseline.md
notebooks/: fall-guard-cv_train_xgboost_colab.ipynb  train_colab.ipynb
scripts/: annotate_urfd.py  check_public_text.py  compare_subjects.py  compare_vlm.py  download_data.py  error_analysis.py  evaluate.py  make_splits.py  peek_video.py  prepare_data.py  prepare_le2i.py  prepare_train_export.py  subject_sheet.py  upload_to_hf.py
src/fallguard/: __init__.py  config.py  detect.py  features.py  fsm.py  notify.py  pose.py  rules.py  stats.py  vlm.py
tests/: conftest.py  test_docs.py  test_evaluate.py  test_features.py  test_fsm.py  test_notify.py  test_prepare_data.py  test_prepare_le2i.py  test_rules.py  test_smoke.py  test_splits.py  test_stats.py  test_vlm.py
