[project]
name = "fallguard"
version = "0.1.0"
description = "居家即時跌倒偵測:pose 關鍵點特徵 + 規則/ML 分類,確認跌倒後以 VLM 描述現場並透過 Discord 通報家人"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5,<1.4.0",  # 1.4.0+ 需要 langchain-core>=1.5.0,會連帶升級目前鎖定的 langchain-core 1.4.9(Phase 6,D42)
    "huggingface-hub>=1.24.0",
    "lap>=0.5.12",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "scikit-learn>=1.7",
    "xgboost>=3.2.0,<3.3.0",  # 3.3.0+ 需要 Python 3.12,本專案鎖 3.11(D10)
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.102",
]

[project.optional-dependencies]
# URFD 失效時的備援資料集(D1),下載前需 Kaggle token(~/.kaggle/kaggle.json)
le2i = ["kaggle>=1.6"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fallguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
